--- a/index.html
+++ b/index.html
@@ -6,227 +6,26 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <title>UJJO</title>
+   
+    <title>LA MULȚI ANI!</title>
     <link rel="stylesheet" href="css/reset.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <header class="header">
-      <div class="container header__inner">
-        <nav class="menu header__menu">
-          <ul class="menu__list header__menu-list">
-            <li class="menu__list-item menu__list-item--bg-pink">
-              <a href="#" class="menu__list-link menu__list-link--color-white">go back</a>
-            </li>
-            <li class="menu__list-item">
-              <a href="#" class="menu__list-link">story</a>
-            </li>
-            <li class="menu__list-item">
-              <a href="#" class="menu__list-link">shop</a>
-            </li>
-            <li class="menu__list-item menu__list-logo">
-              <img src="images/menu-dot-pink.svg" alt="menu-decor-image" class="menu__list-decor-img"></img>
-              <img src="images/menu.svg" alt="menu-image" class="menu__list-logo-img">
-              <img src="images/menu-dot-violet.svg" alt="menu-decor-image" class="menu__list-decor-img"></img>
-            </li>
-            <li class="menu__list-item">
-              <a href="#" class="menu__list-link">contact</a>
-            </li>
-            <li class="menu__list-item">
-              <a href="#" class="menu__list-link">wholesale</a>
-            </li>
-            <li class="menu__list-item menu__list-item--bg-pink">
-              <a href="#" class="menu__list-link menu__list-link--color-white">clone</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-<main class="main">
-  <section class="container top">
-    <div class="top__inner">
-      <div class="top__prezentation">
-        <div class="top__prezentation-logo">
-          <img src="images/logo.svg" alt="logo-image">
-        </div>
-        <div class="top__ticker ticker--top-size">
-          <div class="top__ticker-wrapper">
-            <div class="top__ticker-item">
-              <p>put some fire in your belly</p> 
-              <img src="images/ticker.svg" alt="ticker-image" class="top__ticker-item-img">
-            </div>
-            <div class="top__ticker-item">
-              <p>put some fire in your belly</p> 
-              <img src="images/ticker.svg" alt="ticker-image" class="top__ticker-item-img">
-            </div>
-            <div class="top__ticker-item">
-              <p>put some fire in your belly</p> 
-              <img src="images/ticker.svg" alt="ticker-image" class="top__ticker-item-img">
-              </div>
-            <div class="top__ticker-item">
-              <p>put some fire in your belly</p>
-              <img src="images/ticker.svg" alt="ticker-image" class="top__ticker-item-img">
-            </div>
-          </div>
-        </div>
-        <img src="images/top-1.jpg" alt="product-image" class="top__img">
-      </div>
-      <div class="top__description">
-        <h2 class="top__description-text">the first hot sauce made for cofee</h2>
-        <img src="images/top-2.jpg" alt="product-image" class="top__description-img">
-      </div>
-    </div>
-  </section>
-  <section class="container description">
-    <div class="description__inner">
-      <img src="images/section-descr.svg" alt="decor-image" class="description__img">
-      <p class="description__text">throw some lava in your java</p>
-      <img src="images/section-descr.svg" alt="decor-image" class="description__img">
-    </div>
-  </section>
-  <section class="container products">
-    <div class="products__inner">
-      <div class="products__content">
-        <div class="products__item">
-          <p class="products__item-text">
-            tangy and tingly
-          </p>
-          <h2 class="products__item-name">
-            LIGHT ROAST BLEND
-          </h2>
-          <img src="images/products-1.png" alt="product-image" class="products__item-img">
-        </div>
-        <div class="products__item">
-          <p class="products__item-text">
-            light & dark roast
-          </p>
-          <h2 class="products__item-name">
-            UJJO SAMPLER PACK
-          </h2>
-          <img src="images/products-2.png" alt="product-image" class="products__item-img">
-        </div>
-        <div class="products__item">
-          <p class="products__item-text">
-            tangy and tingly
-          </p>
-          <h2 class="products__item-name">
-            DARK ROAST BLEND
-          </h2>
-          <img src="images/products-3.png" alt="product-image" class="products__item-img">
-        </div>
-      </div>
-      <div class="products__ticker">
-        <div class="products__ticker-wrapper">
-          <div class="products__ticker-item">
-            <p>put some fire in your belly</p> 
-            <img src="images/ticker.svg" alt="ticker-image" class="products__ticker-item-img">
-          </div>
-        <div class="products__ticker-item">
-          <p>put some fire in your belly</p>
-          <img src="images/ticker.svg" alt="ticker-image" class="products__ticker-item-img">
-        </div>
-          <div class="products__ticker-item">
-            <p>put some fire in your belly</p>
-            <img src="images/ticker.svg" alt="ticker-image" class="products__ticker-item-img">
-          </div>
-          <div class="products__ticker-item">
-            <p>put some fire in your belly</p>
-            <img src="images/ticker.svg" alt="ticker-image" class="products__ticker-item-img">
-          </div>
-          <div class="products__ticker-item">
-            <p>put some fire in your belly</p>
-            <img src="images/ticker.svg" alt="ticker-image" class="products__ticker-item-img">
-          </div>
-          <div class="products__ticker-item">
-            <p>put some fire in your belly</p>
-            <img src="images/ticker.svg" alt="ticker-image" class="products__ticker-item-img">
-          </div>
-          <div class="products__ticker-item">
-            <p>put some fire in your belly</p>
-            <img src="images/ticker.svg" alt="ticker-image" class="products__ticker-item-img">
-          </div>
-          <div class="products__ticker-item">
-            <p>put some fire in your belly</p>
-            <img src="images/ticker.svg" alt="ticker-image" class="products__ticker-item-img">
-          </div>
-        </div>
-      </div>
-      <img src="images/products-4.jpg" alt="product-image" class="products__img">
-    </div>
-  </section>
-  <section class="container about">
-    <div class="about__inner">
-      <div class="about__title">
-        <h1 class="about__title-text">the story behind the souce</h1>
-        <img src="images/about-1.jpg" alt="product-image" class="about__title-img">
-      </div>
-      <div class="about__story">
-        <div class="about__story-box">
-        <p class="about__story-text">hello, i’m lauren and as a lifelong adventurous eater, i’ve tried a lot of crazy things, but i never thought hot sauce
-        in coffee was a sane option until a friend dared me to try it.</p>
-        <p class="about__story-text">and it sucked.</p>
-        <p class="about__story-text">but i wondered if there was a way to add spice to my coffee. when there was no easy solution, ujjo was born.</p>
-        <p class="about__story-text">ujjo (ooo-joe): the word for “fire” in konkani, spoken on the west coast of india, is an homage and a love letter to my
-        dad, an indian immigrant who instilled a fire in my palate – and my heart – from the very beginning.</p>
-      </div>
-      </div>
-    </div>
-  </section>
-</main>
-    <footer class="container footer footer--bg-img">
-      <div class="footer__inner">
-        <div class="footer__background">
-          <div class="footer__ticker">
-            <div class="footer__ticker-wrapper">
-              <div class="footer__ticker-item">
-                <p>for partnership opportunities</p> 
-              <img src="images/ticker.svg" alt="ticker-image" class="footer__ticker-item-img">
-              <p>download our media kit</p>
-              <img src="images/ticker.svg" alt="ticker-image" class="footer__ticker-item-img">
-            </div>
-            <div class="footer__ticker-item">
-              <p>for partnership opportunities</p>
-              <img src="images/ticker.svg" alt="ticker-image" class="footer__ticker-item-img">
-              <p>download our media kit</p>
-              <img src="images/ticker.svg" alt="ticker-image" class="footer__ticker-item-img">
-            </div>
-              <div class="footer__ticker-item">
-                <p>for partnership opportunities</p>
-                <img src="images/ticker.svg" alt="ticker-image" class="footer__ticker-item-img">
-                <p>download our media kit</p>
-                <img src="images/ticker.svg" alt="ticker-image" class="footer__ticker-item-img">
-              </div>
-            <div class="footer__ticker-item">
-              <p>for partnership opportunities</p>
-              <img src="images/ticker.svg" alt="ticker-image" class="footer__ticker-item-img">
-              <p>download our media kit</p>
-              <img src="images/ticker.svg" alt="ticker-image" class="footer__ticker-item-img">
-            </div>
-            </div>
-          </div>
-          <div class="footer__logo">
-            <img src="images/logo.svg" alt="logo-image" class="footer__logo-img">
-            <img src="images/bottom-decor.svg" alt="decor-image" class="footer__logo-decor">
-          </div>
-        </div>
-        <nav class="menu footer__menu">
-          <ul class="menu__list footer__menu-list">
-            <li class="menu__list-item">
-              <a href="#" class="menu__list-link footer-menu__list-item">privacy</a>
-            </li>
-            <li class="menu__list-item">
-              <span class="menu__list-text footer-menu__list-item">ujjo llc, columbus oh, 43219</span>
-            </li>
-            <li class="menu__list-item">
-              <a href="#" class="menu__list-link footer-menu__list-item">instagram</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </footer>
+    <div class="bg-img"></div>
+    <div class="bg-img-2"></div>
+<h1><span>A</span><span>t</span><span>i</span><span>n</span><span>g</span><span>
+  </span><span>e</span><span>-</span><span>m</span><span>ă</span><span>!</span></h1>
+  <div id="particles-js"></div>
   </body>
+
+  <script src="js/particles.js"></script>
+  <script src="js/particles.min.js"></script>
+  <script src="js/script.js"></script>
+    <script src="js/main.js"></script>
 </html>
