--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/main.css" />
   </head>
-  <body>
+  <body onload="sing()">
     <div class="bg-img"></div>
     <div class="bg-img-2"></div>
 <h1><span>A</span><span>t</span><span>i</span><span>n</span><span>g</span><span>
   </span><span>e</span><span>-</span><span>m</span><span>ă</span><span>!</span></h1>
   <div id="particles-js"></div>
-  </body>
-
+  <audio id="audio" src="music/Frank Sinatra - Jingle Bells(alofon.cc).mp3"></audio>
   <script src="js/particles.js"></script>
   <script src="js/particles.min.js"></script>
   <script src="js/script.js"></script>
-    <script src="js/main.js"></script>
+  <script src="js/main.js"></script>
+  </body>
 </html>
