--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/main.css" />
   </head>
-  <body onload="sing()">
+  <body id="body">
     <div class="bg-img"></div>
     <div class="bg-img-2"></div>
 <h1><span>A</span><span>t</span><span>i</span><span>n</span><span>g</span><span>
