--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
+      rel="stylesheet">
+
+
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Agu+Display&display=swap" rel="stylesheet">
    
     <title>LA MULȚI ANI!</title>
     <link rel="stylesheet" href="css/reset.css" />
@@ -17,15 +26,20 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body id="body">
-    <div class="bg-img"></div>
+    <div class="bg-img active"></div>
     <div class="bg-img-2"></div>
-<h1><span>A</span><span>t</span><span>i</span><span>n</span><span>g</span><span>
-  </span><span>e</span><span>-</span><span>m</span><span>ă</span><span>!</span></h1>
+<h1 class="words">Atinge-mă!</h1>
   <div id="particles-js"></div>
   <audio id="audio" src="music/Frank Sinatra - Jingle Bells(alofon.cc).mp3"></audio>
+
+<img class="toy" src="images/f39900777a323116d4c60b7a709b6058-removebg-preview.png" alt="">
+<h1 class="text displayNone">GHEORGHE, <br> LA MULȚI ANI FERICIȚI!</h1>
+
   <script src="js/particles.js"></script>
   <script src="js/particles.min.js"></script>
   <script src="js/script.js"></script>
   <script src="js/main.js"></script>
   </body>
+
+ 
 </html>
