--- a/index.html
+++ b/index.html
@@ -3,19 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
-      rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Agu+Display&display=swap"
+      rel="stylesheet"
+    />
 
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Agu+Display&display=swap" rel="stylesheet">
-   
     <title>LA MULȚI ANI!</title>
     <link rel="stylesheet" href="css/reset.css" />
     <link
@@ -28,18 +35,25 @@
   <body id="body">
     <div class="bg-img active"></div>
     <div class="bg-img-2"></div>
-<h1 class="words">Atinge-mă!</h1>
-  <div id="particles-js"></div>
-  <audio id="audio" src="music/Frank Sinatra - Jingle Bells(alofon.cc).mp3"></audio>
+    <h1 class="words">Atinge-mă!</h1>
+    <div id="particles-js"></div>
+    <audio
+      id="audio"
+      src="music/Frank Sinatra - Jingle Bells(alofon.cc).mp3"
+    ></audio>
 
-<img class="toy" src="images/f39900777a323116d4c60b7a709b6058-removebg-preview.png" alt="">
-<h1 class="text displayNone">GHEORGHE, <br> LA MULȚI ANI FERICIȚI!</h1>
+    <img class="toy" src="images/OIP-removebg-preview.png" alt="" />
+    <img class="fire" src="images/artificii.png" alt="" />
+    <img class="fire-2" src="images/artificii.png" alt="" />
+    <img class="fire-3" src="images/artificii.png" alt="" />
+    <h1 class="text displayNone">
+      GHEORGHE, <br />
+      LA MULȚI <br />ANI <br />FERICIȚI!
+    </h1>
 
-  <script src="js/particles.js"></script>
-  <script src="js/particles.min.js"></script>
-  <script src="js/script.js"></script>
-  <script src="js/main.js"></script>
+    <script src="js/particles.js"></script>
+    <script src="js/particles.min.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/main.js"></script>
   </body>
-
- 
 </html>
